--- a/static/hello.html
+++ b/static/hello.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Hello</title>
+    <title>Ujicoba Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-        <h2>Hi,<em>Nama saya Iyung Fachrur Rozi Saya berkuliah di Unusida.</em></h2>
+        <h2><em>Nama saya Iyung Fachrur Rozi Saya berkuliah di Unusida.</em></h2>
     
 </body>
 </html>
