--- a/static/hello.html
+++ b/static/hello.html
@@ -7,10 +7,18 @@
         .c {
           font-family: "Trirong", serif;
         }
+ 
+        .font{
+
+          font-family: cursive;
+
+        }
         </style>
 </head>
 <body>
-        <h2 style="color:Tomato;">Hi,<em style="color:DodgerBlue;">Nama saya Iyung Fachrur Rozi Saya berkuliah di<em  style="color:MediumSeaGreen;" class="c"> Unusida.</em></em></h2>
+        <h2 style="color:Tomato;">Hi,<em style="color:DodgerBlue;">Nama saya Iyung Fachrur Rozi </h2>
+          <h4  style="color:rgb(53, 175, 5) ;" class="font">  dari Program Studio <div style="color: rgb(189, 9, 165);"> Teknik Informatika Angkatan 2021.</div></h4>
+            <h3>Saya berkuliah di<em  style="color:MediumSeaGreen;" class="c"> Unusida.</em></em></h3>
     
 </body>
 </html>
